Align impacts list Corrected apis requests

--- a/src/app.css
+++ b/src/app.css
@@ -5,6 +5,10 @@ main {
 	height: 100%;
 }
 
+li {
+	text-align: left;
+}
+
 /*
 TaskTree properties
 */
